# p-eq-np

./: .gitignore  RESULTS.md  cabal.project  p-eq-np.cabal
app/: Main.hs
bench/: AdaptiveLearner.hs  AlgebraicShortCircuit.hs  ArtificialSigns.hs  BenchActor.hs  BenchBottomUp.hs  BenchRRec.hs  BenchSieve.hs  BitLevelDP.hs  CarryGameOfLife.hs  CascadeTwist.hs  CompressionGap.hs  ContourExperiments.hs  DualPrune.hs  DynamicRichCatalog.hs  FullVerify.hs  GarbageCollect.hs  GaussianFlare.hs  HeavyBench.hs  HonestBench.hs  HybridADTMitm.hs  LazyFuture.hs  LogDomain.hs  MagneticDP.hs  MoebiusLift.hs  MultiplierSearch.hs  MutatingOracle.hs  NearbyStructured.hs  NonLinearMix.hs  OracleBench.hs  ParBench.hs  PathCatalog.hs  PersistentHomology.hs  ProfileBottomUp.hs  RandomMarkers.hs  RecursiveApprox.hs  ResidualBench.hs  RichCatalog.hs  SaddlePoint.hs  SmoothDecomp.hs  StructuralBench.hs  (+6 more)
ideas/: 00-core-thesis.md  01-enriched-compose-operator.md  02-categorical-transformations.md  03-subset-sum-as-category.md  04-open-questions.md
src/PeqNP/: ActorSolver.hs  Adjunction.hs  BitDecompose.hs  BooleanReduction.hs  BottomUpMITM.hs  BruteForce.hs  CategoryExperiments.hs  Combined.hs  CombinedPipeline.hs  Comparison.hs  Composition.hs  DPSolver.hs  DensityMap.hs  Diagonal.hs  EnrichedArrow.hs  EnrichedCategory.hs  FingerTree.hs  FiniteMonoid.hs  Functor.hs  Homomorphism.hs  Impossibility.hs  Interference.hs  KuperbergSieve.hs  LLL.hs  Landscape.hs  LazyTree.hs  MITM.hs  MultiLevelSieve.hs  MyhillNerode.hs  NTT.hs  OptimalGF2.hs  OracleSolver.hs  ParallelSolver.hs  PolyEnriched.hs  PolyQuotient.hs  Polynomial.hs  Quotient.hs  ReachMonad.hs  Relaxation.hs  Report.hs  (+9 more)
test/: Spec.hs
