cabal-version:      3.0
name:               p-eq-np
version:            0.1.0.0
synopsis:           Enriched category theory approach to P vs NP via Subset Sum
license:            MIT
author:             Damian Rafael Lattenero
build-type:         Simple

library
  exposed-modules:
    PeqNP.EnrichedCategory
    PeqNP.EnrichedArrow
    PeqNP.SubsetSum
    PeqNP.Composition
  build-depends:
    base >= 4.14 && < 5
  hs-source-dirs:   src
  default-language:  Haskell2010
  ghc-options:       -Wall

executable p-eq-np
  main-is:          Main.hs
  build-depends:
    base >= 4.14 && < 5,
    p-eq-np
  hs-source-dirs:   app
  default-language:  Haskell2010

test-suite p-eq-np-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:
    base >= 4.14 && < 5,
    p-eq-np
  hs-source-dirs:   test
  default-language:  Haskell2010
