cabal-version:      3.12
name:               p-eq-np
version:            0.1.0.0
synopsis:           Enriched category theory approach to P vs NP via Subset Sum
license:            MIT
author:             Damian Rafael Lattenero
build-type:         Simple

library
  exposed-modules:
    PeqNP.EnrichedCategory
    PeqNP.EnrichedArrow
    PeqNP.SubsetSum
    PeqNP.Composition
    PeqNP.BruteForce
    PeqNP.DPSolver
    PeqNP.Comparison
    PeqNP.Quotient
    PeqNP.Functor
    PeqNP.BooleanReduction
    PeqNP.FiniteMonoid
    PeqNP.Homomorphism
    PeqNP.Search
    PeqNP.Impossibility
    PeqNP.Report
    PeqNP.ReachMonad
    PeqNP.MyhillNerode
    PeqNP.VariableOrdering
    PeqNP.Adjunction
    PeqNP.CategoryExperiments
    PeqNP.Polynomial
    PeqNP.PolyEnriched
    PeqNP.PolyQuotient
    PeqNP.NTT
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7
  hs-source-dirs:   src
  default-language:  GHC2024
  ghc-options:       -Wall -Wcompat

executable p-eq-np
  main-is:          Main.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   app
  default-language:  GHC2024

test-suite p-eq-np-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np,
    containers >= 0.7,
    tasty >= 1.5,
    tasty-quickcheck >= 0.11
  hs-source-dirs:   test
  default-language:  GHC2024
