cabal-version:      3.12
name:               p-eq-np
version:            0.1.0.0
synopsis:           Enriched category theory approach to P vs NP via Subset Sum
license:            MIT
author:             Damian Rafael Lattenero
build-type:         Simple

library
  exposed-modules:
    PeqNP.EnrichedCategory
    PeqNP.EnrichedArrow
    PeqNP.SubsetSum
    PeqNP.Composition
    PeqNP.BruteForce
    PeqNP.DPSolver
    PeqNP.Comparison
    PeqNP.Quotient
    PeqNP.Functor
    PeqNP.BooleanReduction
    PeqNP.FiniteMonoid
    PeqNP.Homomorphism
    PeqNP.Search
    PeqNP.Impossibility
    PeqNP.Report
    PeqNP.ReachMonad
    PeqNP.MyhillNerode
    PeqNP.VariableOrdering
    PeqNP.Adjunction
    PeqNP.CategoryExperiments
    PeqNP.Polynomial
    PeqNP.PolyEnriched
    PeqNP.PolyQuotient
    PeqNP.NTT
    PeqNP.Relaxation
    PeqNP.Rounding
    PeqNP.Landscape
    PeqNP.LazyTree
    PeqNP.Streaming
    PeqNP.Diagonal
    PeqNP.LLL
    PeqNP.DensityMap
    PeqNP.Topological
    PeqNP.Combined
    PeqNP.MITM
    PeqNP.OptimalGF2
    PeqNP.CombinedPipeline
    PeqNP.MultiLevelSieve
    PeqNP.Interference
    PeqNP.KuperbergSieve
    PeqNP.FingerTree
    PeqNP.UnifiedExperiments
    PeqNP.BitDecompose
    PeqNP.ActorSolver
    PeqNP.ParallelSolver
    PeqNP.OracleSolver
    PeqNP.ResidualGraph
    PeqNP.StructuralSolver
    PeqNP.BottomUpMITM
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    array >= 0.5,
    stm >= 2.5,
    async >= 2.2
  hs-source-dirs:   src
  default-language:  GHC2024
  ghc-options:       -Wall -Wcompat

executable verify-correctness
  main-is:          VerifyCorrectness.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable bench-sieve
  main-is:          BenchSieve.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable bench-actor
  main-is:          BenchActor.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2 -threaded -rtsopts "-with-rtsopts=-N"

executable verify-actor
  main-is:          VerifyActor.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2 -threaded -rtsopts "-with-rtsopts=-N"

executable structural-bench
  main-is:          StructuralBench.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable residual-bench
  main-is:          ResidualBench.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable oracle-bench
  main-is:          OracleBench.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable par-bench
  main-is:          ParBench.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2 -threaded -rtsopts "-with-rtsopts=-N"

executable honest-bench
  main-is:          HonestBench.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable heavy-bench
  main-is:          HeavyBench.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2 -threaded -rtsopts "-with-rtsopts=-N"

executable gaussian-flare
  main-is:          GaussianFlare.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable topo-quotient
  main-is:          TopologicalQuotient.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable saddle-point
  main-is:          SaddlePoint.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable log-domain
  main-is:          LogDomain.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable random-markers
  main-is:          RandomMarkers.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable garbage-collect
  main-is:          GarbageCollect.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable dual-prune
  main-is:          DualPrune.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable adaptive-learner
  main-is:          AdaptiveLearner.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable smooth-decomp
  main-is:          SmoothDecomp.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable persistent-homology
  main-is:          PersistentHomology.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable topo-binary-search
  main-is:          TopoBinarySearch.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable magnetic-dp
  main-is:          MagneticDP.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable artificial-signs
  main-is:          ArtificialSigns.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable tree-fusion
  main-is:          TreeFusion.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable moebius-lift
  main-is:          MoebiusLift.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable cascade-twist
  main-is:          CascadeTwist.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable compression-gap
  main-is:          CompressionGap.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable algebraic-short-circuit
  main-is:          AlgebraicShortCircuit.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    array,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable lazy-future
  main-is:          LazyFuture.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable dynamic-rich-catalog
  main-is:          DynamicRichCatalog.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable rich-catalog
  main-is:          RichCatalog.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable path-catalog
  main-is:          PathCatalog.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable hybrid-adt-mitm
  main-is:          HybridADTMitm.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    array,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable bit-level-dp
  main-is:          BitLevelDP.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable contour-experiments
  main-is:          ContourExperiments.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable recursive-approx
  main-is:          RecursiveApprox.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable nearby-structured
  main-is:          NearbyStructured.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable nonlinear-mix
  main-is:          NonLinearMix.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable multiplier-search
  main-is:          MultiplierSearch.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable carry-gol
  main-is:          CarryGameOfLife.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable mutating-oracle
  main-is:          MutatingOracle.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable verify-big-oracle
  main-is:          VerifyBigOracle.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable profile-bottomup
  main-is:          ProfileBottomUp.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable bench-bottomup
  main-is:          BenchBottomUp.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    p-eq-np
  hs-source-dirs:   bench
  default-language:  GHC2024
  ghc-options:       -O2

executable p-eq-np
  main-is:          Main.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np
  hs-source-dirs:   app
  default-language:  GHC2024

test-suite p-eq-np-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:
    base >= 4.21 && < 5,
    p-eq-np,
    containers >= 0.7,
    tasty >= 1.5,
    tasty-quickcheck >= 0.11
  hs-source-dirs:   test
  default-language:  GHC2024
